--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <h1>TIME SERIES</h1>
       <p>with d3 and React</p>
-      <div id="chart"></div>
+      <div id="timeseries"></div>
+      <h1>LINE CHART</h1>
+      <div id="line-chart"></div>
     </div>
 
     <script src="//fb.me/react-0.12.0.js"></script>
@@ -20,11 +22,16 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/public/javascripts/lib/lodash.min.js"></script>
     <script src="/public/javascripts/namespace.js"></script>
-    <script src="/public/javascripts/views/features/line.jsx"   type="text/jsx"></script>
-    <script src="/public/javascripts/views/features/points.jsx" type="text/jsx"></script>
-    <script src="/public/javascripts/views/axes/x_axis.jsx" type="text/jsx"></script>
-    <script src="/public/javascripts/views/axes/y_axis.jsx" type="text/jsx"></script>
-    <script src="/public/javascripts/views/time_series.jsx" type="text/jsx"></script>
-    <script src="/public/javascripts/app.jsx"               type="text/jsx"></script>
+
+    <script src="/public/javascripts/views/components/mixins/line_chart_mixin.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/components/mixins/axes_mixin.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/components/features/line.jsx"   type="text/jsx"></script>
+    <script src="/public/javascripts/views/components/features/points.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/components/axes/x_axis.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/components/axes/y_axis.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/line_charts/time_series.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/line_charts/line_chart.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/timeseries.jsx"               type="text/jsx"></script>
+    <script src="/public/javascripts/line_chart.jsx"               type="text/jsx"></script>
   </body>
 </html>
