Add threshold values

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="/public/javascripts/views/components/features/points.jsx" type="text/jsx"></script>
     <script src="/public/javascripts/views/components/axes/x_axis.jsx" type="text/jsx"></script>
     <script src="/public/javascripts/views/components/axes/y_axis.jsx" type="text/jsx"></script>
+    <script src="/public/javascripts/views/components/features/threshold.jsx" type="text/jsx"></script>
     <script src="/public/javascripts/views/line_charts/time_series.jsx" type="text/jsx"></script>
     <script src="/public/javascripts/views/line_charts/line_chart.jsx" type="text/jsx"></script>
     <script src="/public/javascripts/timeseries.jsx"               type="text/jsx"></script>
